--- a/examples/platforms/efr32mg12/Makefile.am
+++ b/examples/platforms/efr32mg12/Makefile.am
@@ -98,12 +98,12 @@ libopenthread_efr32mg12_a_CPPFLAGS                                            = 
     $(NULL)
 
 PLATFORM_SOURCES                                                              = \
-    alarm.c                                                                     \
-    diag.c                                                                      \
+    ../efr32/alarm.c                                                                     \
+    ../efr32/diag.c                                                                      \
     entropy.c                                                                   \
-    fem-control.c                                                               \
-    flash.c                                                                     \
-    logging.c                                                                   \
+    ../efr32/fem-control.c                                                               \
+    ../efr32/flash.c                                                                     \
+    ../efr32/logging.c                                                                   \
     misc.c                                                                      \
     openthread-core-efr32-config.h                                              \
     openthread-core-efr32-config-check.h                                        \
@@ -111,7 +111,7 @@ PLATFORM_SOURCES                                                              = 
     platform-band.h                                                             \
     radio.c                                                                     \
     rail_config.h                                                               \
-    startup-gcc.c                                                               \
+    ../efr32/startup-gcc.c                                                               \
     system.c                                                                    \
     uart.c                                                                      \
     $(NULL)
