OPENTHREAD-465: Update Makefiles because platform dirs moved

--- a/examples/platforms/efr32/efr32mg1/Makefile.am
+++ b/examples/platforms/efr32/efr32mg1/Makefile.am
@@ -56,7 +56,8 @@ libopenthread_efr32mg1_a_CPPFLAGS                                             = 
     -DCORTEXM3_EFM32_MICRO                                                      \
     -DPLAT=EMBER_PLATFORM_CORTEXM3                                              \
     -I$(top_srcdir)/examples/platforms                                          \
-    -I$(top_srcdir)/examples/platforms/efr32mg1/$(EFR32_BOARD_DIR)              \
+    -I$(top_srcdir)/examples/platforms/efr32/efr32mg1/$(EFR32_BOARD_DIR)        \
+    -I$(top_srcdir)/examples/platforms/efr32/src                                \
     -I$(top_srcdir)/include                                                     \
     -I$(top_srcdir)/src/core                                                    \
     -I$(top_srcdir)/third_party/silabs/rail_config                              \
@@ -98,13 +99,17 @@ libopenthread_efr32mg1_a_CPPFLAGS                                             = 
     -Wno-missing-field-initializers                                             \
     $(NULL)
 
+PLATFORM_COMMON_SOURCES                                                              = \
+    src/alarm.c                                                                     \
+    src/diag.c                                                                      \
+    src/fem-control.c                                                               \
+    src/flash.c                                                                     \
+    src/logging.c                                                                   \
+    src/startup-gcc.c                                                               \
+    $(NULL)
+
 PLATFORM_SOURCES                                                              = \
-    ../efr32/alarm.c                                                                     \
-    ../efr32/diag.c                                                                      \
     entropy.c                                                                   \
-    ../efr32/fem-control.c                                                               \
-    ../efr32/flash.c                                                                     \
-    ../efr32/logging.c                                                                   \
     misc.c                                                                      \
     openthread-core-efr32-config.h                                              \
     openthread-core-efr32-config-check.h                                        \
@@ -112,7 +117,6 @@ PLATFORM_SOURCES                                                              = 
     platform-band.h                                                             \
     radio.c                                                                     \
     rail_config.h                                                               \
-    ../efr32/startup-gcc.c                                                               \
     system.c                                                                    \
     uart.c                                                                      \
     $(NULL)
@@ -123,6 +127,7 @@ noinst_HEADERS                                                                = 
     $(NULL)
 
 libopenthread_efr32mg1_a_SOURCES                                              = \
+    $(PLATFORM_COMMON_SOURCES)                                                  \
     $(PLATFORM_SOURCES)                                                         \
     $(NULL)
 
