OPENTHREAD-465: Fix build. sleepy-demo builds too

--- a/examples/platforms/efr32/efr32mg12/Makefile.am
+++ b/examples/platforms/efr32/efr32mg12/Makefile.am
@@ -98,7 +98,7 @@ libopenthread_efr32mg12_a_CPPFLAGS                                            = 
     -Wno-missing-field-initializers                                             \
     $(NULL)
 
-PLATFORM_COMMON_SOURCES                                                              = \
+PLATFORM_COMMON_SOURCES                                                           = \
     src/alarm.c                                                                     \
     src/diag.c                                                                      \
     src/fem-control.c                                                               \
@@ -108,21 +108,21 @@ PLATFORM_COMMON_SOURCES                                                         
     $(NULL)
 
 PLATFORM_SOURCES                                                              = \
-    entropy.c                                                                   \
-    misc.c                                                                      \
-    openthread-core-efr32-config.h                                              \
-    openthread-core-efr32-config-check.h                                        \
-    platform-efr32.h                                                            \
-    platform-band.h                                                             \
-    radio.c                                                                     \
-    rail_config.h                                                               \
-    system.c                                                                    \
-    uart.c                                                                      \
+    efr32mg12/entropy.c                                                                   \
+    efr32mg12/misc.c                                                                      \
+    efr32mg12/openthread-core-efr32-config.h                                              \
+    efr32mg12/openthread-core-efr32-config-check.h                                        \
+    efr32mg12/platform-efr32.h                                                            \
+    efr32mg12/platform-band.h                                                             \
+    efr32mg12/radio.c                                                                     \
+    efr32mg12/rail_config.h                                                               \
+    efr32mg12/system.c                                                                    \
+    efr32mg12/uart.c                                                                      \
     $(NULL)
 
 noinst_HEADERS                                                                = \
-    platform-efr32.h                                                            \
-    platform-band.h                                                             \
+    efr32mg12/platform-efr32.h                                                            \
+    efr32mg12/platform-band.h                                                             \
     $(NULL)
 
 libopenthread_efr32mg12_a_SOURCES                                             = \
@@ -136,11 +136,11 @@ libopenthread_efr32mg12_a_LIBADD                                                
     $(shell find $(top_builddir)/third_party/jlink/SEGGER_RTT_V640/RTT $(Dash)type f $(Dash)name "*.o")
 
 DIST_SUBDIRS                                                                  = \
-    sleepy-demo                                                                 \
+    efr32mg12/sleepy-demo                                                                 \
     $(NULL)
 
 SUBDIRS                                                                       = \
-    sleepy-demo                                                                 \
+    efr32mg12/sleepy-demo                                                                 \
     $(NULL)
 
 include $(abs_top_nlbuild_autotools_dir)/automake/post.am
