--- a/examples/platforms/efr32/efr32mg1/Makefile.am
+++ b/examples/platforms/efr32/efr32mg1/Makefile.am
@@ -105,13 +105,13 @@ PLATFORM_COMMON_SOURCES                                                       = 
     src/fem-control.c                                                           \
     src/flash.c                                                                 \
     src/logging.c                                                               \
+    src/misc.c                                                                  \
     src/startup-gcc.c                                                           \
     src/uart.c                                                                  \
     $(NULL)
 
 PLATFORM_SOURCES                                                              = \
     efr32mg1/entropy.c                                                          \
-    efr32mg1/misc.c                                                             \
     efr32mg1/openthread-core-efr32-config.h                                     \
     efr32mg1/openthread-core-efr32-config-check.h                               \
     efr32mg1/platform-efr32.h                                                   \
