OPENTHREAD-465: Merge and move rail_config.h to efr32/src

--- a/examples/platforms/efr32/efr32mg1/Makefile.am
+++ b/examples/platforms/efr32/efr32mg1/Makefile.am
@@ -106,6 +106,7 @@ PLATFORM_COMMON_SOURCES                                                       = 
     src/flash.c                                                                 \
     src/logging.c                                                               \
     src/misc.c                                                                  \
+    src/rail_config.h                                                           \
     src/startup-gcc.c                                                           \
     src/uart.c                                                                  \
     $(NULL)
@@ -117,7 +118,6 @@ PLATFORM_SOURCES                                                              = 
     efr32mg1/platform-efr32.h                                                   \
     efr32mg1/platform-band.h                                                    \
     efr32mg1/radio.c                                                            \
-    efr32mg1/rail_config.h                                                      \
     efr32mg1/system.c                                                           \
     efr32mg1/uart-init.h                                                        \
     $(NULL)
