--- a/examples/Makefile-efr32mg13
+++ b/examples/Makefile-efr32mg13
@@ -85,8 +85,12 @@ EFR32_MBEDTLS_CPPFLAGS += -I$(AbsTopSourceDir)/third_party/mbedtls
 EFR32_MBEDTLS_CPPFLAGS += -I$(AbsTopSourceDir)/third_party/mbedtls/repo/include
 EFR32_MBEDTLS_CPPFLAGS += -I$(AbsTopSourceDir)/third_party/mbedtls/repo/include/mbedtls
 
+
+EFR32_PLATFORM = efr32mg12
+EFR32_BOARD = $(shell echo $(BOARD) | tr A-Z a-z)
+
 CONFIG_FILE_PATH = $(AbsTopSourceDir)/examples/platforms/efr32/
-HAL_CONF_DIR     = $(CONFIG_FILE_PATH)/$(shell echo $(BOARD) | tr A-Z a-z)
+HAL_CONF_DIR     = $(CONFIG_FILE_PATH)/$(EFR32_PLATFORM)/$(EFR32_BOARD)
 
 EFR32MG13_CONFIG_FILE_CPPFLAGS  = -DOPENTHREAD_PROJECT_CORE_CONFIG_FILE='\"openthread-core-efr32-config.h\"'
 EFR32MG13_CONFIG_FILE_CPPFLAGS += -DOPENTHREAD_CORE_CONFIG_PLATFORM_CHECK_FILE='\"openthread-core-efr32-config-check.h\"'
