--- a/examples/platforms/efr32/efr32mg12/sleepy-demo/sleepy-demo-mtd/Makefile.am
+++ b/examples/platforms/efr32/efr32mg12/sleepy-demo/sleepy-demo-mtd/Makefile.am
@@ -32,6 +32,7 @@ include $(top_srcdir)/examples/platforms/Makefile.platform.am
 override CFLAGS   := $(filter-out -Wconversion,$(CFLAGS))
 override CXXFLAGS := $(filter-out -Wconversion,$(CXXFLAGS))
 
+EFR32_PLATFORM = efr32mg12
 EFR32_BOARD_DIR = $(shell echo $(BOARD) | tr A-Z a-z)
 
 SDK_SRC_DIR = $(top_srcdir)/third_party/silabs/gecko_sdk_suite/v2.7
@@ -52,7 +53,9 @@ CPPFLAGS_COMMON                                                              += 
     -DCORTEXM3_EFM32_MICRO                                                      \
     -DPLAT=EMBER_PLATFORM_CORTEXM3                                              \
     -I$(top_srcdir)/examples/platforms                                          \
-    -I$(top_srcdir)/examples/platforms/efr32mg12/$(EFR32_BOARD_DIR)             \
+    -I$(top_srcdir)/examples/platforms/efr32/$(EFR32_PLATFORM)/$(EFR32_BOARD_DIR) \
+    -I$(top_srcdir)/examples/platforms/efr32/$(EFR32_PLATFORM)                  \
+    -I$(top_srcdir)/examples/platforms/efr32/src                                \
     -I$(top_srcdir)/include                                                     \
     -I$(top_srcdir)/src/core                                                    \
     -I$(top_srcdir)/third_party/silabs/rail_config                              \
