--- a/examples/platforms/efr32/efr32mg21/Makefile.am
+++ b/examples/platforms/efr32/efr32mg21/Makefile.am
@@ -42,6 +42,7 @@ override CXXFLAGS := $(filter-out -pedantic-errors,$(CXXFLAGS))
 override CFLAGS   := $(filter-out -Wundef,$(CFLAGS))
 override CXXFLAGS := $(filter-out -Wundef,$(CXXFLAGS))
 
+EFR32_PLATFORM = efr32mg21
 EFR32_BOARD_DIR = $(shell echo $(BOARD) | tr A-Z a-z)
 
 SDK_SRC_DIR = $(top_srcdir)/third_party/silabs/gecko_sdk_suite/v2.7
@@ -52,7 +53,8 @@ libopenthread_efr32mg21_a_CPPFLAGS                                            = 
     -DPLATFORM_HEADER=\"platform/base/hal/micro/cortexm3/compiler/gcc.h\"       \
     -Wno-sign-compare                                                           \
     -I$(top_srcdir)/examples/platforms                                          \
-    -I$(top_srcdir)/examples/platforms/efr32/efr32mg21/$(EFR32_BOARD_DIR)       \
+    -I$(top_srcdir)/examples/platforms/efr32/$(EFR32_PLATFORM)/$(EFR32_BOARD_DIR) \
+    -I$(top_srcdir)/examples/platforms/efr32/$(EFR32_PLATFORM)                  \
     -I$(top_srcdir)/examples/platforms/efr32/src                                \
     -I$(top_srcdir)/include                                                     \
     -I$(top_srcdir)/src/core                                                    \
