OPENTHREAD-465: Move entropy.c to efr32/src
- Fix nvm sizing issue for efr32mg21

--- a/examples/Makefile-efr32mg21
+++ b/examples/Makefile-efr32mg21
@@ -107,6 +107,7 @@ COMMONCFLAGS                       := \
     -DNVM3_DEFAULT_NVM_SIZE=40960     \
     -D__START=main                    \
     -D$(MCU)                          \
+    -DNVM3_DEFAULT_NVM_SIZE=40960     \
     $(EFR32MG21_CONFIG_FILE_CPPFLAGS) \
     $(NULL)
 
