--- a/examples/platforms/efr32/efr32mg13/Makefile.am
+++ b/examples/platforms/efr32/efr32mg13/Makefile.am
@@ -103,6 +103,7 @@ libopenthread_efr32mg13_a_CPPFLAGS                                            = 
 PLATFORM_COMMON_SOURCES                                                       = \
     src/alarm.c                                                                 \
     src/diag.c                                                                  \
+    src/entropy.c                                                               \
     src/fem-control.c                                                           \
     src/flash.c                                                                 \
     src/logging.c                                                               \
@@ -115,7 +116,6 @@ PLATFORM_COMMON_SOURCES                                                       = 
     $(NULL)
 
 PLATFORM_SOURCES                                                              = \
-    efr32mg13/entropy.c                                                         \
     efr32mg13/platform-efr32.h                                                  \
     efr32mg13/platform-band.h                                                   \
     efr32mg13/radio.c                                                           \
